--- a/package.json
+++ b/package.json
@@ -4,134 +4,15 @@
   "description": "EDTECH-FRONTEND",
   "main": "server.js",
   "dependencies": {
-    "has-property-descriptors": "^1.0.2",
-    "has-proto": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "hasown": "^2.0.2",
-    "html-entities": "^2.5.2",
-    "http-errors": "^2.0.0",
-    "http-parser-js": "^0.5.8",
-    "http-proxy-agent": "^5.0.0",
-    "https-proxy-agent": "^7.0.4",
-    "iconv-lite": "^0.4.24",
-    "ieee754": "^1.2.1",
-    "inherits": "^2.0.4",
-    "ini": "^1.3.8",
-    "ipaddr.js": "^1.9.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-stream": "^2.0.1",
-    "isarray": "^1.0.0",
-    "jose": "^4.15.5",
-    "json-bigint": "^1.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwa": "^2.0.0",
-    "jwks-rsa": "^3.1.0",
-    "jws": "^4.0.0",
-    "limiter": "^1.1.5",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.includes": "^4.3.0",
-    "lodash.isboolean": "^3.0.3",
-    "lodash.isinteger": "^4.0.4",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isstring": "^4.0.1",
-    "lodash.once": "^4.1.1",
-    "long": "^5.2.3",
-    "lru-cache": "^6.0.0",
-    "lru-memoizer": "^2.3.0",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime": "^3.0.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "mimic-response": "^3.1.0",
-    "minimist": "^1.2.8",
-    "mkdirp": "^0.5.6",
-    "mkdirp-classic": "^0.5.3",
-    "ms": "^2.0.0",
-    "multer": "^1.4.5-lts.1",
-    "napi-build-utils": "^1.0.2",
-    "negotiator": "^0.6.3",
-    "node-abi": "^3.62.0",
-    "node-addon-api": "^5.1.0",
-    "node-fetch": "^2.7.0",
-    "node-forge": "^1.3.1",
-    "object-assign": "^4.1.1",
-    "object-hash": "^3.0.0",
-    "object-inspect": "^1.13.1",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "p-limit": "^3.1.0",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^0.1.7",
-    "prebuild-install": "^7.1.2",
-    "process-nextick-args": "^2.0.1",
-    "proto3-json-serializer": "^2.0.2",
-    "protobufjs": "^7.3.0",
-    "proxy-addr": "^2.0.7",
-    "pump": "^3.0.0",
-    "qs": "^6.11.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
-    "rc": "^1.2.8",
-    "readable-stream": "^3.6.2",
-    "require-directory": "^2.1.1",
-    "retry": "^0.13.1",
-    "retry-request": "^7.0.2",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "semver": "^7.6.2",
-    "send": "^0.18.0",
-    "serve-static": "^1.15.0",
-    "set-function-length": "^1.2.2",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.0.6",
-    "simple-concat": "^1.0.1",
-    "simple-get": "^4.0.1",
-    "statuses": "^2.0.1",
-    "stream-events": "^1.0.5",
-    "stream-shift": "^1.0.3",
-    "streamsearch": "^1.1.0",
-    "string-width": "^4.2.3",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.1",
-    "strip-json-comments": "^2.0.1",
-    "strnum": "^1.0.5",
-    "stubs": "^3.0.0",
-    "tar-fs": "^2.1.1",
-    "tar-stream": "^2.2.0",
-    "teeny-request": "^9.0.0",
-    "toidentifier": "^1.0.1",
-    "tr46": "^0.0.3",
-    "tslib": "^2.6.2",
-    "tunnel-agent": "^0.6.0",
-    "type-is": "^1.6.18",
-    "typedarray": "^0.0.6",
-    "undici-types": "^5.26.5",
-    "unpipe": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "uuid": "^9.0.1",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^3.0.1",
-    "websocket-driver": "^0.7.4",
-    "websocket-extensions": "^0.1.4",
-    "whatwg-url": "^5.0.0",
-    "wrap-ansi": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "xtend": "^4.0.2",
-    "y18n": "^5.0.8",
-    "yallist": "^4.0.0",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yocto-queue": "^0.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.8.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node api/server.js"
   },
   "keywords": [],
   "author": "",
